Ajustes do Modal e de Cartões

--- a/Home.css
+++ b/Home.css
@@ -1,7 +1,10 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: #143934;
-    overflow-x: hidden;
-    margin: 0;
 }
 
 .Navbar {
@@ -13,55 +16,93 @@ body {
     color: #35dc7f;
     position: relative;
     right: 88%;
+    transition: color 0.3s ease;
 }
 
-#meuModal .modal-header {
-    background-color: #143934;
+.NavbarTitulo:hover {
+    color: #2ca569;
 }
 
-#meuModal .modal-body {
-    padding: 20px; 
-    border: #257D58 5px solid;
+.ModalConteudo {
+    border: #257D58 10px solid;
+    border-radius: 10%;
+    padding: 5px; 
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.800000011920929);
 }
 
 .Usuario {
-    background-color: yellowgreen;
+    background-color: #143934;
+    color: #ffffff;
+    border-top-left-radius: 45px;
+    border-top-right-radius: 45px;
+}
+
+img[alt="FotoUsuário.png"] {
+    width: 140px;
+    height: 130px;
 }
 
 .Informacoes {
-    background-color: yellowgreen;
+    padding: 20px;
 }
 
-img[alt="Vacina.png"], img[alt="Medicamento.png"], img[alt="Patologia.png"]{
+.Informacoes p {
+    font-size: 20px;
+    margin-bottom: 15px;
+    padding-bottom: 5px;
+}
+
+.Informacoes hr {
+    border: 2px solid #9baaaa;
+    opacity: 1;
+    margin-top: -20px;
+    margin-bottom: 30px;
+}
+
+.Icones {
+    display: flex;
+    justify-content: space-between;
+    margin: 5px;
+    padding: 5px 25px;
+}
+
+.Icones a {
+    background-color: #257D58;
+}
+
+.Icones i {
+    color: #35DC7F;
+}
+
+.BotaoIcone:hover {
+    background-color: rgba(37, 125, 88, 0.8);
+  }
+
+img[alt="Vacina.png"],
+img[alt="Medicamento.png"],
+img[alt="Patologia.png"] {
     height: 250px;
 }
 
-.Cartao1Corpo, .Cartao2Corpo, .Cartao3Corpo {
-    height: 15rem;
+.CartaoCorpo {
+    height: 6cm;
     background-color: #35dc7f;
     position: relative;
     text-align: center;
 }
 
-.Cartao1 {
-    width: 20%;
-    left: 10%;
-    bottom: 10%;
-    position: fixed;
+.Cartoes {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    position: relative;
+    top: 39vh;
 }
 
-.Cartao2 {
-    width: 20%;
-    left: 40%;
-    bottom: 10%;
-    position: fixed;
-}
-
-.Cartao3 {
-    width: 20%;
-    left: 70%;
-    bottom: 10%;
-    position: fixed;
+.Cartao {
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.800000011920929);
+    width: 26%;
 }
 
 .CartaoTitulo {
@@ -73,12 +114,12 @@ img[alt="Vacina.png"], img[alt="Medicamento.png"], img[alt="Patologia.png"]{
     transition: background-color 0.5s;
     background-color: #052E11;
     width: 55%;
-    height: 25%;
+    height: 30%;
     margin-top: 15%;
     color: #ffffff;
-    font-size: x-large; 
+    font-size: x-large;
 }
 
 .CartaoBotao:hover {
-    background-color: #2ca569; 
+    background-color: #2ca569;
 }
